--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,16 @@
   ],
   "routes": [
     {
+      "src": "/analyze",
+      "methods": ["POST"],
+      "dest": "app.py"
+    },
+    {
+      "src": "/",
+      "methods": ["GET"],
+      "dest": "app.py"
+    },
+    {
       "src": "/(.*)",
       "dest": "app.py"
     }
