--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-blinker==1.9.0
-click==8.3.1
-colorama==0.4.6
 Flask==2.3.2
-flask-cors==6.0.2
-gunicorn==25.0.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-packaging==26.0
-Werkzeug==3.1.5
+Flask-SQLAlchemy==3.1.1
+Flask-Cors==4.0.1
+gunicorn==21.2.0
