--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,9 @@ pydantic_core==2.33.2
 pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
+pywin32==310
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
