--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
+cffi==2.0.0
 charset-normalizer==3.4.2
 click==8.2.0
 cloudpickle==3.1.1
 colorama==0.4.6
 contourpy==1.3.2
+cryptography==46.0.4
 cycler==0.12.1
 databricks-sdk==0.53.0
 Deprecated==1.2.18
@@ -55,12 +57,14 @@ protobuf==6.31.0
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==3.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-http-client==3.3.7
 pytz==2025.2
 pywin32==310
 PyYAML==6.0.2
@@ -70,6 +74,7 @@ rpds-py==0.25.1
 rsa==4.9.1
 scikit-learn==1.6.1
 scipy==1.15.3
+sendgrid==6.12.5
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
