--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ opentelemetry-semantic-conventions==0.54b1
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
-protobuf==6.31.0
+protobuf
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -96,4 +96,4 @@ watchdog==6.0.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 zipp==3.21.0
-google-generativeai==0.8.3
+google-generativeai
